--- a/static/index.html
+++ b/static/index.html
@@ -22,8 +22,10 @@
     "/>
   </head> 
   <body bgcolor="black" height="100%" width="100%"> 
-    <img id="startpoint" src="startpoint.png"/>
     <canvas id="c" width="100%" height="100%" style="-webkit-tap-highlight-color: transparent;"></canvas> 
+	<img id="startpoint" src="startpoint.png" style="display:none;">
+	<img id="endpoint" src="endpoint.png" style="display:none;">
+	<img id="middlepoint" src="middlepoint.png" style="display:none;">
     <script>
 var canvas = document.getElementById('c');
 var host = window.location.host;
@@ -78,7 +80,42 @@ function drawCircle(context,entity) {
         //moveTo(x,y);
         fillStyle = entity["colour"];
         strokeStyle = fillStyle;
-        arc(x, y, (entity["radius"])?entity["radius"]:50, 0, 2.0 * Math.PI, false);  
+		if (entity["start"] == 1) {
+			var img = document.getElementById('startpoint');
+			drawImage(img, x-32, y-48, 55, 55);
+		}
+		else if (entity["end"] == 1) {
+			var img = document.getElementById('endpoint');
+			drawImage(img, x-32, y-48, 64, 64);
+		}
+		else if (entity["middle"] == 1) {
+			var img = document.getElementById('middlepoint');
+			drawImage(img, x-16, y-24, 32, 32);
+		}
+		else {
+			arc(x, y, (entity["radius"])?entity["radius"]:50, 0, 2.0 * Math.PI, false);
+		}
+        stroke();                                
+    }
+}
+
+function drawStart(context, entity) {
+	with(context) {
+        beginPath();
+        var x = entity["x"];
+        var y = entity["y"];
+		var img = document.getElementById('startpoint');
+		drawImage(img, x-32, y-32, 64, 64);
+        stroke();                                
+    }
+}
+
+function drawEnd(context, entity) {
+	with(context) {
+        beginPath();
+        var x = entity["x"];
+        var y = entity["y"];
+		
         stroke();                                
     }
 }
@@ -90,6 +127,15 @@ function prepEntity(entity) {
     if (!entity["radius"]) {
         entity["radius"] = 50;
     }
+	if (!entity["start"]) {
+		entity["start"] = 0;
+	}
+	if (!entity["end"]) {
+		entity["end"] = 0;
+	}
+	if (!entity["middle"]) {
+		entity["middle"] = 0;
+	}
     return entity;
 }
 
@@ -107,7 +153,7 @@ function renderFrame() {
     clearFrame();
     for (var key in world) {
         var entity = world[key];
-        drawCircle(context,prepEntity(entity));
+		drawCircle(context,prepEntity(entity));
     }
 }
 
@@ -260,26 +306,15 @@ mouse = (function() {
 // Add the application specific mouse listeners!
 //XXX: TODO Make these prettier!
 mouse.mousedowners.push(function(x,y,clicked,e) {
-    addEntityWithoutName({'x':x,'y':y,'colour':'transparent', 'radius':0});
-    var img = new Image();
-    img.onload = function() {
-        canvas.drawImage(img, x-50, y-32);
-    }
-    img.src = "startpoint.png";
+    addEntityWithoutName({'x':x,'y':y, 'start':1, 'end':0, 'middle':0});
 });
 
 mouse.mouseuppers.push(function(x,y,clicked,e) {
-    addEntityWithoutName({'x':x,'y':y,'colour':'transparent', 'radius':0});
-    var img = new Image();
-    img.onload = function() {
-        canvas.drawImage(img, x-45, y-45);
-    }
-    img.src = "endpoint.png";
+    addEntityWithoutName({'x':x,'y':y, 'start':0, 'end':1, 'middle':0});
 });
 
 mouse.mousedraggers.push(function(x,y,clicked,e) {
-    addEntityWithoutName({'x':x,'y':y,'colour':'while',
-                          'radius':2});
+    addEntityWithoutName({'x':x,'y':y, 'start':0, 'end':0, 'middle':1});
 });
 
 
