--- a/static/index.html
+++ b/static/index.html
@@ -180,7 +180,7 @@ function addEntity(entity, data) {
     world[entity] = data;
     drawNextFrame(); // (but should we?)
     //XXX: Send a XHTML Request that updates the entity you just  modified!
-    sendJSONXMLHTTPRequest("/entity/"+entity, data, function(){});
+    sendJSONXMLHTTPRequest("/entity/"+entity, JSON.stringify(data), function(){});
 }
 
 var counter = 0;
